collect line string in ThrowStatementNode, adapt ArraySummaryTest to use ExceptionPath